// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkDown render html without escaing it 1`] = `
<DocumentFragment>
  <div
    class="cache-18ai6pl-StyledContainer ejtitxs0"
  >
    <p>
      <span>
        Hello
      </span>
      <br />
      <span>
        World
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render paragraph inline 1`] = `
<DocumentFragment>
  .cache-rus7tn-StyledContainer-StyledContainer>p {
  display: inline;
}

<div
    class="cache-rus7tn-StyledContainer-StyledContainer ejtitxs0"
  >
    <p>
      <span>
        I am a paragraph.
      </span>
    </p>
    <p>
      <span>
        And a second one
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string 1`] = `
<DocumentFragment>
  .cache-8pvx2m-StyledText-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 0;
}

.cache-10iou2z-StyledLink-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  font-size: inherit;
}

.cache-10iou2z-StyledLink-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-10iou2z-StyledLink-StyledLink>* {
  pointer-events: none;
}

.cache-10iou2z-StyledLink-StyledLink:hover,
.cache-10iou2z-StyledLink-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.cache-10iou2z-StyledLink-StyledLink:hover .e4bq1r52,
.cache-10iou2z-StyledLink-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-10iou2z-StyledLink-StyledLink:hover::after,
.cache-10iou2z-StyledLink-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.cache-10iou2z-StyledLink-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-46pynu-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #f6f6f8;
  padding: 8px;
}

.cache-1t8vhoi-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-18ai6pl-StyledContainer ejtitxs0"
  >
    <h2
      class="ejtitxs2 cache-8pvx2m-StyledText-StyledText e1tg3t120"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="ejtitxs3 cache-10iou2z-StyledLink-StyledLink e4bq1r50"
        href="https://commonmark.org/help/"
      >
        <span>
          here
        </span>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p />
    <div
      class="cache-46pynu-Container ejtitxs1"
    >
      <code
        class="cache-1t8vhoi-StyledText e1tg3t120"
      >
        const example = 1 // Inline code
      </code>
    </div>
    <p />
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string with target blank 1`] = `
<DocumentFragment>
  .cache-8pvx2m-StyledText-StyledText {
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-top: 0;
}

.cache-10iou2z-StyledLink-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  font-size: inherit;
}

.cache-10iou2z-StyledLink-StyledLink .e4bq1r52 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-10iou2z-StyledLink-StyledLink>* {
  pointer-events: none;
}

.cache-10iou2z-StyledLink-StyledLink:hover,
.cache-10iou2z-StyledLink-StyledLink:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #1a4dbf;
  text-decoration-color: #1a4dbf;
}

.cache-10iou2z-StyledLink-StyledLink:hover .e4bq1r52,
.cache-10iou2z-StyledLink-StyledLink:focus .e4bq1r52 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-10iou2z-StyledLink-StyledLink:hover::after,
.cache-10iou2z-StyledLink-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.cache-10iou2z-StyledLink-StyledLink:active {
  text-decoration-thickness: 2px;
}

.cache-46pynu-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  background-color: #f6f6f8;
  padding: 8px;
}

.cache-1t8vhoi-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: JetBrains;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-18ai6pl-StyledContainer ejtitxs0"
  >
    <h2
      class="ejtitxs2 cache-8pvx2m-StyledText-StyledText e1tg3t120"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="ejtitxs3 cache-10iou2z-StyledLink-StyledLink e4bq1r50"
        href="https://commonmark.org/help/"
      >
        <span>
          here
        </span>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p />
    <div
      class="cache-46pynu-Container ejtitxs1"
    >
      <code
        class="cache-1t8vhoi-StyledText e1tg3t120"
      >
        const example = 1 // Inline code
      </code>
    </div>
    <p />
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
